Backend ObtenerCuadro Perioodo Socio Solo Implementado el servicio

--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="Model\PeriodoSocioModel.cs" />
     <Compile Include="ObligacionesServices.cs" />
     <Compile Include="Interfaces\IObligacionesServices.cs" />
     <Compile Include="TransferenciasServices.cs" />
