--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -227,7 +227,8 @@
     <Content Include="App\extensible\locale\extensible-lang-sv_SE.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_CN.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_TW.js" />
-    <Content Include="App\Model\CierresParada\Cierres.js" />
+    <Content Include="App\Model\CierresParada\CierresParada.js" />
+    <Content Include="App\Model\CierresParada\Detalles.js" />
     <Content Include="App\Model\Socios\KardexDebe.js" />
     <Content Include="App\Model\Cajas\Cajas.js" />
     <Content Include="App\Model\Cajas\Kardex.js" />
@@ -268,7 +269,8 @@
     <Content Include="App\Model\Ventas\DetallesVentaEdit.js" />
     <Content Include="App\Model\Ventas\DetallesVenta.js" />
     <Content Include="App\Model\Ventas\Ventas.js" />
-    <Content Include="App\Store\CierresParada\Cierres.js" />
+    <Content Include="App\Store\CierresParada\CierresParada.js" />
+    <Content Include="App\Store\CierresParada\Detalles.js" />
     <Content Include="App\Store\Socios\KardexDebe.js" />
     <Content Include="App\Store\Autos\AutosSocios.js" />
     <Content Include="App\Store\Cajas\Cajas.js" />
@@ -334,6 +336,7 @@
     <Content Include="App\View\Choferes\Grids.js" />
     <Content Include="App\View\Choferes\ImageField.js" />
     <Content Include="App\View\Choferes\Principal.js" />
+    <Content Include="App\View\CierresParada\GridDetalles.js" />
     <Content Include="App\View\Clientes\FormCrearVenta.js" />
     <Content Include="App\View\Clientes\FormMovimiento.js" />
     <Content Include="App\View\Clientes\Forms.js" />
