--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -3808,6 +3808,7 @@
     <EmbeddedResource Include="Reportes\Hoja.rdlc" />
     <EmbeddedResource Include="Reportes\Report1.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteHojas.rdlc" />
+    <EmbeddedResource Include="Reportes\ReporteKardexHojaSocio.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteSocioMovil.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteSocioMovilHoja.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteTotal.rdlc" />
