implementacion de nuevos reportes y sp de eliminar registros de socios

--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="Model\NumLetra.cs" />
     <Compile Include="RegulacionesServices.cs" />
     <Compile Include="Interfaces\IRegulacionesServices.cs" />
     <Compile Include="PermisosServices.cs" />
