--- a/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
+++ b/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PartialSD_MOVILES.cs" />
+    <Compile Include="PartialSD_HOJAS_CONTROL.cs" />
     <Compile Include="PartialSD_SOCIO_MOVILES.cs" />
     <Compile Include="Modelo.Designer.cs">
       <AutoGen>True</AutoGen>
