--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -55,6 +55,10 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="Interfaces\PrestamosServices.cs" />
+    <Compile Include="PrestamosServices.cs" />
+    <Compile Include="MovilesServices.cs" />
+    <Compile Include="Interfaces\IMovilesServices.cs" />
     <Compile Include="Model\NumLetra.cs" />
     <Compile Include="RegulacionesServices.cs" />
     <Compile Include="Interfaces\IRegulacionesServices.cs" />
