--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -55,6 +55,8 @@
     <Compile Include="CajasServices.cs" />
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="KardexHojasServices.cs" />
+    <Compile Include="Interfaces\IKardexHojasServices.cs" />
     <Compile Include="Interfaces\PrestamosServices.cs" />
     <Compile Include="PrestamosServices.cs" />
     <Compile Include="MovilesServices.cs" />
