--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Controllers\AutosController.cs" />
     <Compile Include="Controllers\CierresController.cs" />
     <Compile Include="Controllers\CierresParadaController.cs" />
+    <Compile Include="Controllers\KardexHojaController.cs" />
     <Compile Include="Controllers\PrestamosController.cs" />
     <Compile Include="Controllers\MovilesController.cs" />
     <Compile Include="Controllers\RegulacionesController.cs" />
@@ -236,6 +237,7 @@
     <Content Include="App\Model\CierresParada\CierresParada.js" />
     <Content Include="App\Model\CierresParada\Detalles.js" />
     <Content Include="App\Model\Cierres\Detalles.js" />
+    <Content Include="App\Model\KardexHojas\KardexHojas.js" />
     <Content Include="App\Model\Prestamos\Prestamos.js" />
     <Content Include="App\Model\Prestamos\TiposPrestamos.js" />
     <Content Include="App\Model\Regulaciones\Detalles.js" />
@@ -288,6 +290,7 @@
     <Content Include="App\Store\CierresParada\CierresParada.js" />
     <Content Include="App\Store\CierresParada\Detalles.js" />
     <Content Include="App\Store\Cierres\Detalles.js" />
+    <Content Include="App\Store\KardexHojas\KardexHojas.js" />
     <Content Include="App\Store\Prestamos\Prestamos.js" />
     <Content Include="App\Store\Prestamos\TiposPrestamos.js" />
     <Content Include="App\Store\Regulaciones\Regulaciones.js" />
@@ -384,6 +387,11 @@
     <Content Include="App\View\CierresParada\FormCierre.js" />
     <Content Include="App\View\CierresParada\GridCierres.js" />
     <Content Include="App\View\CierresParada\Principal.js" />
+    <Content Include="App\View\KardexHojas\FormAuto.js" />
+    <Content Include="App\View\KardexHojas\Forms.js" />
+    <Content Include="App\View\KardexHojas\GridKardexHojas.js" />
+    <Content Include="App\View\KardexHojas\Grids.js" />
+    <Content Include="App\View\KardexHojas\Principal.js" />
     <Content Include="App\View\Reportes\ReportesSocios.js" />
     <Content Include="App\View\TiposPrestamos\FormTipoPrestamo.js" />
     <Content Include="App\View\TiposPrestamos\Forms.js" />
